# ha-daze

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/daze/: __init__.py  api.py  auth.py  config_flow.py  const.py  coordinator.py  entity.py  exceptions.py  manifest.json  models.py  sensor.py  strings.json
custom_components/daze/translations/: es.json  it.json
scripts/: auth_spike.py
tests/: conftest.py  test_api.py  test_auth.py  test_config_flow.py  test_coordinator.py  test_models.py  test_sensor.py
tests/fixtures/: evses.json  network.json  networks.json  remote_info.json  user_profile.json
